src/test/ui/recursion/recursive-enum.stderr
error[E0072]: recursive type `list` has infinite size
  --> $DIR/recursive-enum.rs:11:1
   |
LL | enum list<T> { cons(T, list<T>), nil }
   | ^^^^^^^^^^^^           ------- recursive without indirection
   | |
   | recursive type has infinite size
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `list` representable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
